# my-kaggle-tools

./: README.md  setup.py  visualize-tps-oct22.py
competitions/finding-elo-aug-2023/: .python-version  README.md  pyproject.toml
competitions/finding-elo-aug-2023/docs/: Makefile  conf.py  index.rst  make.bat
competitions/finding-elo-aug-2023/notebooks/: 0.0-ic-getting-started-chess.ipynb  0.1-ic-game-phases.ipynb
competitions/finding-elo-aug-2023/src/features/: constants.py  game.py  main.py  middlegame.py  opening.py  players.py  utils.py
competitions/tabular-playground-series-oct-2022/: .gitignore  Makefile  README.md  conda-env.yml  conda_linux.yml  requirements.txt  setup.py
competitions/tabular-playground-series-oct-2022/docs/: Makefile  conf.py  index.rst  make.bat
competitions/tabular-playground-series-oct-2022/models/: config.yaml
competitions/tabular-playground-series-oct-2022/notebooks/: 0.0-ic-compress-csv.ipynb  0.0-ic-create-stratified-data.ipynb  0.0-ic-exploratory-data-analysis.ipynb  0.0-ic-feature-engineering.ipynb  0.0-ic-final-model.ipynb  0.0-ic-first-look-at-data.ipynb  0.0-ic-first-model.ipynb  0.0-ic-hyperparam-bayesian-optimization.ipynb  0.0-ic-hyperparam-random-search.ipynb  0.0-ic-ipca-fine-tuning.ipynb  0.0-ic-ipca-lgbm-bayes-fast.ipynb  0.0-ic-ipca-lgbm-bayes-parallel.ipynb  0.0-ic-ipca-lgbm-bayes.ipynb  0.0-ic-non-linear-decomposition.ipynb  0.0-ic-pca-fine-tuning.ipynb  0.0-ic-predictions-dask.ipynb  0.0-ic-predictions.ipynb  0.0-ic-train-base-model.ipynb  kernel-metadata.json  (+2 more)
docs/: conf.py  index.rst
(+12 files in other folders)
