[tool.poetry]
name = "finding-elo"
version = "0.1.0"
description = "Predict chess player's ELO rating using only piece moves from a single game."
authors = ["Ian Castillo <ian.castillx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
chess = "^1.10.0"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
requests = "^2.31.0"
black = "^23.9.1"
nbqa = "^1.7.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
